# CS5224_Project

./: README.md  evaluation.py  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  download_model.py  pyproject.toml
backend/src/: config.py  main.py  schemas.py
backend/src/models/: model_rain_S100.json  model_rain_S107.json  model_rain_S116.json  model_rain_S118.json  model_rain_S203.json  model_rain_S214.json  model_rain_S218.json  model_rain_S220.json  model_rain_S221.json  model_rain_S223.json  model_rain_S229.json  model_rain_S230.json  model_rain_S24.json  model_rain_S36.json  model_rain_S40.json  model_rain_S50.json  model_rain_S61.json  model_rain_S66.json  model_rain_S69.json  model_rain_S900.json  model_rain_S92.json  model_rain_S94.json  model_sun.json  tariff_commercial.json
backend/src/services/: advisory_api.py  geocode.py  llm_service.py  pv.py  roi.py  scenarios.py  tariff.py  weather_model.py
core_model/: README.md  evaluation.py  forecast.ipynb  forecast_new.ipynb
core_model/data/: electricity.csv  rainfall.csv  station_meta.csv
core_model/model/: model_rain.json  model_rain_S07.json  model_rain_S08.json  model_rain_S101.json  model_rain_S102.json  model_rain_S104.json  model_rain_S105.json  model_rain_S106.json  model_rain_S108.json  model_rain_S109.json  model_rain_S11.json  model_rain_S111.json  (+52 more)
data/: sunshine.csv
model/: model_sun.json
solar-frontend/: .env.production  .firebaserc  README(frontend).md  README.md  package-lock.json  users.json
src/: App.jsx
(+18 files in other folders)
